[gd_scene load_steps=11 format=3 uid="uid://dc375dqn4f03p"]

[ext_resource type="Script" path="res://game_over.gd" id="1_26te8"]
[ext_resource type="ArrayMesh" uid="uid://b21r02bnvdmit" path="res://assets/models/characterVampire.obj" id="3_c2tm0"]
[ext_resource type="ArrayMesh" uid="uid://dh8t50ooxe78i" path="res://assets/models/crate.obj" id="3_t0dc0"]
[ext_resource type="PackedScene" uid="uid://b55nrc7tglefj" path="res://blocks/platform_large.tscn" id="5_gg2dm"]
[ext_resource type="PackedScene" uid="uid://60r1yhwvcjes" path="res://ui/button.tscn" id="6_w4xxd"]
[ext_resource type="PackedScene" uid="uid://vcsq4niwot4j" path="res://entities/coin.tscn" id="7_hvb8r"]

[sub_resource type="Environment" id="Environment_s36x5"]
background_mode = 1
background_color = Color(0, 0.337255, 0.560784, 1)

[sub_resource type="Animation" id="Animation_tak7j"]
resource_name = "Jumping"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Char/CharacterVampire:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.1, 2),
"transitions": PackedFloat32Array(0.757858, 1.31951, 1, 1, 1),
"update": 0,
"values": [Vector3(-1, 1, -1), Vector3(-1, 2, -1), Vector3(-1, 1, -1), Vector3(-1, 1, -1), Vector3(-1, 1, -1)]
}

[sub_resource type="Animation" id="Animation_ye0mc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Char/CharacterVampire:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1, 1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2mgec"]
_data = {
"Jumping": SubResource("Animation_tak7j"),
"RESET": SubResource("Animation_ye0mc")
}

[node name="GameOver" type="Node3D"]
script = ExtResource("1_26te8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_s36x5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.904339, -0.099144, -0.41514, 0.426593, 0.241331, 0.871652, 0.0137672, -0.965365, 0.260539, 0, 7, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -3, 3.5, 3.5)
current = true
fov = 60.0

[node name="Char" type="Node3D" parent="."]

[node name="PlatformLarge" parent="Char" instance=ExtResource("5_gg2dm")]

[node name="PlatformLarge2" parent="Char" instance=ExtResource("5_gg2dm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="PlatformLarge3" parent="Char" instance=ExtResource("5_gg2dm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="PlatformLarge4" parent="Char" instance=ExtResource("5_gg2dm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="CharacterVampire" type="MeshInstance3D" parent="Char"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -1, 1, -1)
mesh = ExtResource("3_c2tm0")
skeleton = NodePath("../..")

[node name="Crate" type="MeshInstance3D" parent="Char"]
transform = Transform3D(1.93185, 0, -0.517638, 0, 2, 0, 0.517638, 0, 1.93185, -2.5, 1, -2)
mesh = ExtResource("3_t0dc0")
skeleton = NodePath("../..")

[node name="Crate2" type="MeshInstance3D" parent="Char"]
transform = Transform3D(1.73205, 0, -1, 0, 2, 0, 1, 0, 1.73205, -1, 1, -2.5)
mesh = ExtResource("3_t0dc0")
skeleton = NodePath("../..")

[node name="Crate3" type="MeshInstance3D" parent="Char"]
transform = Transform3D(2, 0, -5.7221e-09, 0, 2, 0, -1.18867e-08, 0, 2, 0.5, 1, -2)
mesh = ExtResource("3_t0dc0")
skeleton = NodePath("../..")

[node name="Crate4" type="MeshInstance3D" parent="Char"]
transform = Transform3D(1.93185, 0, 0.517638, 0, 2, 0, -0.517638, 0, 1.93185, -0.5, 2, -2.5)
mesh = ExtResource("3_t0dc0")
skeleton = NodePath("../..")

[node name="Crate5" type="MeshInstance3D" parent="Char"]
transform = Transform3D(1.93185, 0, -0.517638, 0, 2, 0, 0.517638, 0, 1.93185, -2, 2, -2.5)
mesh = ExtResource("3_t0dc0")
skeleton = NodePath("../..")

[node name="CoinArea" type="Node3D" parent="."]

[node name="Coin" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -1)

[node name="Coin2" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, -0.5)
anim_skip = 0.2

[node name="Coin3" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)

[node name="Coin4" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, 0.5)
anim_skip = 0.2

[node name="Coin9" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="Coin10" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1, 0.5)
anim_skip = 0.2

[node name="Coin5" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="Coin6" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
anim_skip = 0.2

[node name="Coin11" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
anim_skip = 0.2

[node name="Coin14" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3, -2.5)

[node name="Coin16" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -2.5)

[node name="Coin15" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2, -2)
anim_skip = 0.2

[node name="Coin7" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Coin8" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0.5)
anim_skip = 0.2

[node name="Coin12" parent="CoinArea" instance=ExtResource("7_hvb8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.5)
anim_skip = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2mgec")
}

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 1069.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 150
text = "Game Over!"
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="UI"]
layout_mode = 1
offset_left = 32.0
offset_top = 248.0
offset_right = 1111.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "You got XX coins.
That's enought for the debt!"
vertical_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -434.0
offset_right = 540.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="MainMenu" parent="UI/MainMenu" instance=ExtResource("6_w4xxd")]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="PlayAgain" parent="UI/MainMenu" instance=ExtResource("6_w4xxd")]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again"

[node name="Quit" parent="UI/MainMenu" instance=ExtResource("6_w4xxd")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
